<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="24dp">

            <EditText
                android:id="@+id/et_food_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/space_mono"
                android:textColor="@color/AncientGreen"
                android:hint="@string/food_name"
                android:textSize="20sp"
                android:inputType="text"/>

            <ImageView
                android:id="@+id/img_food"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="4dp"
                android:contentDescription="@string/food_image"
                app:srcCompat="@color/lightForest" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_camera"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/ic_photo_camera_white_24dp"
                    android:text="@string/btn_camera"
                    android:visibility="gone"/>

                <Button
                    android:id="@+id/btn_gallery"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/ic_insert_photo_white_24dp"
                    android:text="@string/btn_gallery"
                    android:visibility="gone"/>
            </LinearLayout>

            <TextView
                style="@style/textViewStyle"
                android:text="@string/food_type_title"/>

            <TextView
                android:id="@+id/tv_type"
                android:hint="@string/tv_choose_type"
                style="@style/textViewStyle"
                />
            <Spinner
                android:id="@+id/spn_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

            <TextView
                style="@style/textViewStyle"
                android:text="@string/food_ingredients_title" />

            <EditText
                android:id="@+id/et_food_ingredient"
                style="@style/editTextStyle"
                android:inputType="textMultiLine"
                android:hint="@string/food_ingredients" />

            <TextView
                style="@style/textViewStyle"
                android:text="@string/food_step_title" />

            <EditText
                android:id="@+id/et_food_step"
                style="@style/editTextStyle"
                android:inputType="textMultiLine"
                android:hint="@string/food_step" />

            <Button
                android:id="@+id/btn_save"
                style="@android:style/Widget.DeviceDefault.Button.Borderless.Colored"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_save"
                android:visibility="gone"/>

        </LinearLayout>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_edit_recipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_mode_edit_white_24dp" />


</FrameLayout>

